ajustando pacote do docker