@@ -1,13 +1,8 @@
 FROM amazoncorretto:21-alpine-jdk
 WORKDIR /app
 
-COPY .mvn/ .mvn
-COPY mvnw pom.xml ./
+COPY target/*.jar app.jar
 
-RUN dos2unix mvnw
+EXPOSE 8080
 
-RUN ./mvnw dependency:resolve
-
-COPY src ./src
-
-CMD ["./mvnw", "spring-boot:run"]
+CMD ["java", "-jar", "-Xms120m","-Xmx120m","-XX:+UseStringDeduplication","-XX:+UseZGC","-XX:+ZGenerational", "app.jar"]
